--- a/wp-content/themes/stargazer/languages/stargazer-ru_RU.po
+++ b/wp-content/themes/stargazer/languages/stargazer-ru_RU.po
@@ -1,339 +1,337 @@
-# Copyright (C) 2014 Justin Tadlock
+# Copyright (C) 2016 Justin Tadlock
 # This file is distributed under the GNU General Public License v2.0 or later.
 msgid ""
 msgstr ""
-"Project-Id-Version: Stargazer 1.2.0-alpha-1\n"
+"Project-Id-Version: Stargazer 2.0.0-dev\n"
 "Report-Msgid-Bugs-To: https://wordpress.org/support/theme/stargazer\n"
-"POT-Creation-Date: 2016-01-07 18:15:23+00:00\n"
-"PO-Revision-Date: 2016-01-07 12:17-0600\n"
-"Last-Translator: Sami Keijonen <sami.keijonen@foxnet.fi>\n"
-"Language-Team: Alexandre Kozoubsky <alexandre@alexandrekozoubsky.com>\n"
-"Language: Português\n"
+"POT-Creation-Date: 2016-01-11 11:05+0300\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 1.5.7\n"
-"Plural-Forms: nplurals=2; plural=(n > 1);\n"
-"X-Poedit-SourceCharset: UTF-8\n"
+"PO-Revision-Date: 2016-01-11 11:23+0300\n"
+"Language-Team: \n"
+"X-Generator: Poedit 1.8.6\n"
+"Last-Translator: Alexander Gruzov <gruz0.mail@gmail.com>\n"
+"Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n"
+"%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
+"Language: ru_RU\n"
 
 #: comment/comment.php:7 comment/ping.php:5
 msgid "%s ago"
-msgstr "%s atrás"
+msgstr "%s назад"
 
 #: comment/comment.php:8 comment/ping.php:6 content/link.php:39
 #: content/quote.php:29 content/status.php:47
 msgid "Permalink"
-msgstr "Link permanente"
+msgstr "Постоянная ссылка"
 
 #: comment/comment.php:16
 msgid "Your comment is awaiting moderation."
-msgstr ""
+msgstr "Ваш комментарий ожидает модерации."
 
 #: content/aside.php:26 content/audio.php:28 content/chat.php:34
 #: content/content.php:25 content/gallery.php:26 content/image.php:28
 #: content/link.php:26 content/quote.php:16 content/status.php:24
 #: content/video.php:28
 msgid "Posted in %s"
-msgstr "Publicado em %s"
+msgstr "Опубликовано в %s"
 
 #: content/aside.php:27 content/audio.php:29 content/chat.php:35
 #: content/content.php:26 content/gallery.php:27 content/image.php:29
 #: content/link.php:27 content/quote.php:17 content/status.php:25
 #: content/video.php:29
 msgid "Tagged %s"
-msgstr "Marcação %s"
+msgstr "Помечено %s"
 
 #: content/attachment-audio.php:28 inc/stargazer.php:526
 msgid "Audio Info"
-msgstr "Informações do áudio"
+msgstr "Информация об аудио"
 
 #: content/attachment-audio.php:32 content/attachment-video.php:32
 #: inc/stargazer.php:515 inc/stargazer.php:577
 msgid "Run Time"
-msgstr "Tempo de execução"
+msgstr ""
 
 #: content/attachment-audio.php:33 inc/stargazer.php:516
 msgid "Artist"
-msgstr ""
+msgstr "Артист"
 
 #: content/attachment-audio.php:34 inc/stargazer.php:517
 msgid "Album"
-msgstr ""
+msgstr "Альбом"
 
 #: content/attachment-audio.php:35 inc/stargazer.php:518
 msgid "Track"
-msgstr "Trilha"
+msgstr "Дорожка"
 
 #: content/attachment-audio.php:36 inc/stargazer.php:519
 msgid "Year"
-msgstr "Ano"
+msgstr "Год"
 
 #: content/attachment-audio.php:37 inc/stargazer.php:520
 msgid "Genre"
-msgstr "Gênero"
+msgstr "Жанр"
 
 #: content/attachment-audio.php:38 content/attachment-image.php:71
 #: content/attachment-video.php:34
-#, fuzzy
 msgid "Type"
-msgstr "Tipo do arquivo"
+msgstr "Тип"
 
 #: content/attachment-audio.php:39 content/attachment-image.php:72
 #: content/attachment-video.php:35
-#, fuzzy
 msgid "Name"
-msgstr "Nome do arquivo"
+msgstr "Имя"
 
 #: content/attachment-audio.php:40 content/attachment-image.php:73
 #: content/attachment-video.php:36 inc/stargazer.php:523 inc/stargazer.php:581
 msgid "Mime Type"
-msgstr "Mime Type"
+msgstr "Тип Mime"
 
 #: content/attachment-image.php:22
 msgid "Sizes: %s"
-msgstr "Tamanhos: %s"
+msgstr "Размеры: %s"
 
 #: content/attachment-image.php:60
 msgid "Image Info"
-msgstr "Informações da imagem"
+msgstr "Информация об изображении"
 
 #: content/attachment-image.php:64 content/attachment-video.php:33
 #: inc/stargazer.php:578
 msgid "Dimensions"
-msgstr "Dimensões"
+msgstr "Размеры"
 
 #: content/attachment-image.php:65
 msgid "Date"
-msgstr "Data"
+msgstr "Дата"
 
 #: content/attachment-image.php:66
 msgid "Camera"
-msgstr "Câmera"
+msgstr "Камера"
 
 #: content/attachment-image.php:67
 msgid "Aperture"
-msgstr "Abertura"
+msgstr ""
 
 #: content/attachment-image.php:68
 msgid "Focal Length"
-msgstr "Distância focal"
+msgstr ""
 
 #: content/attachment-image.php:68
 msgid "%s mm"
-msgstr "%s mm"
+msgstr ""
 
 #: content/attachment-image.php:69
 msgid "ISO"
-msgstr "ISO"
+msgstr ""
 
 #: content/attachment-image.php:70
 msgid "Shutter Speed"
-msgstr "Velocidade do obturador"
+msgstr ""
 
 #: content/attachment-image.php:70
 msgid "%s sec"
-msgstr "%s seg"
+msgstr ""
 
 #: content/attachment-image.php:83
 msgid "Gallery"
-msgstr "Galeria"
+msgstr "Галерея"
 
 #: content/attachment-video.php:28 inc/stargazer.php:584
 msgid "Video Info"
-msgstr "Informações do vídeo"
+msgstr "Информация о видео"
 
 #: content/error.php:4
 msgid "Nothing found"
-msgstr "Nada encontrado"
+msgstr "Ничего не найдено"
 
 #: content/error.php:8
 msgid "Apologies, but no entries were found."
-msgstr "Desculpas, mas nenhum registro  foi encontrado."
+msgstr "Извините, записи не найдены."
 
 #: content/gallery.php:51
 msgid "This gallery contains %s item."
 msgid_plural "This gallery contains %s items."
-msgstr[0] "Esta galeria contém %s item."
-msgstr[1] "Esta galeria contém %s itens."
+msgstr[0] ""
+msgstr[1] ""
+msgstr[2] ""
 
 #. Translators: 1 is current year, 2 is site name/link, 3 is WordPress
 #. name/link, and 4 is theme name/link. */
 #: footer.php:18
 msgid "Copyright &#169; %1$s %2$s. Powered by %3$s and %4$s."
-msgstr "Direitos autorais &#169; %1$s %2$s. Desenvolvido por %3$s and %4$s."
+msgstr ""
 
 #: header.php:13
 msgid "Skip to content"
-msgstr "Pular para conteúdo"
+msgstr "Перейти к содержимому"
 
 #: inc/custom-colors.php:244
 msgid "Primary Color"
-msgstr "Côr primária"
+msgstr "Основной цвет"
 
 #. Translators: Header image description.
 #: inc/custom-header.php:48
 msgid "Horizon"
-msgstr "Horizon"
+msgstr ""
 
 #. Translators: Header image description.
 #: inc/custom-header.php:54
 msgid "Orange Burn"
-msgstr "Orange Burn"
+msgstr ""
 
 #. Translators: Header image description.
 #: inc/custom-header.php:60
 msgid "Blue Planets"
-msgstr "Blue Planets"
+msgstr ""
 
 #. Translators: Header image description.
 #: inc/custom-header.php:66
 msgid "Planet Burst"
-msgstr "Planet Burst"
+msgstr ""
 
 #. Translators: Header image description.
 #: inc/custom-header.php:72
 msgid "Space Splatters"
-msgstr "Space Splatters"
+msgstr ""
 
 #: inc/stargazer.php:89
 msgctxt "nav menu location"
 msgid "Primary"
-msgstr "Primaria"
+msgstr "Основное меню"
 
 #: inc/stargazer.php:90
 msgctxt "nav menu location"
 msgid "Secondary"
-msgstr "Secundária"
+msgstr "Меню над шапкой сайта"
 
 #: inc/stargazer.php:91
 msgctxt "nav menu location"
 msgid "Social"
-msgstr "Social"
+msgstr "Социальные сети"
 
 #: inc/stargazer.php:106
 msgctxt "sidebar"
 msgid "Primary"
-msgstr "Primária"
+msgstr "Основной"
 
 #: inc/stargazer.php:107
 msgid ""
 "The main sidebar. It is displayed on either the left or right side of the "
 "page based on the chosen layout."
 msgstr ""
-"A barra lateral principal. Ela é exibida no lado esquerdo ou no lado direito "
-"da página com base no layout escolhido."
+"Главный сайдбар. Выводится на правой или левой стороне страницы в "
+"зависимости от выбранного макета."
 
 #: inc/stargazer.php:114
 msgctxt "sidebar"
 msgid "Subsidiary"
-msgstr "Auxiliar"
+msgstr "Сайдбар в подвале"
 
 #: inc/stargazer.php:115
 msgid ""
 "A sidebar located in the footer of the site. Optimized for one, two, or "
 "three widgets (and multiples thereof)."
 msgstr ""
-"Uma barra lateral localizada no rodapé do site. Optimizada para um, dois, ou "
-"três widgets (e seus múltiplos)."
+"Сайдбар размещается в подвале сайта. Оптимизирован для одного, двух или трёх "
+"виджетов (и кратных им)."
 
 #: inc/stargazer.php:129
 msgid "1 Column Wide"
-msgstr "1 Coluna larga"
+msgstr ""
 
 #: inc/stargazer.php:130
 msgid "1 Column Narrow"
-msgstr "1 Coluna estreita"
+msgstr ""
 
 #: inc/stargazer.php:131
 msgid "2 Columns: Content / Sidebar"
-msgstr "2 Colunas: Conteúdo / Barra lateral"
+msgstr ""
 
 #: inc/stargazer.php:132
 msgid "2 Columns: Sidebar / Content"
-msgstr "2 Colunas: Barra lateral / Conteúdo"
+msgstr ""
 
 #: inc/stargazer.php:179
 msgid "Expand Search Form"
-msgstr "Expandir formulário de pesquisa"
+msgstr "Развернуть форму поиска"
 
 #: inc/stargazer.php:521 inc/stargazer.php:579
 msgid "File Type"
-msgstr "Tipo do arquivo"
+msgstr "Тип файла"
 
 #: inc/stargazer.php:522 inc/stargazer.php:580
 msgid "File Name"
-msgstr "Nome do arquivo"
+msgstr "Имя файла"
 
 #: library/admin/meta-box-post-layout.php:35
 #: library/inc/functions-customize.php:72
 msgid "Layout"
-msgstr "Layout"
+msgstr "Макет"
 
 #: library/admin/meta-box-post-style.php:35
-#, fuzzy
 msgid "Style"
-msgstr "Folha de estilo"
+msgstr "Стиль"
 
 #: library/admin/meta-box-post-template.php:41
 msgid "Template"
-msgstr "Modelo"
+msgstr "Шаблон"
 
 #: library/ext/breadcrumb-trail.php:244
 msgid "Browse:"
-msgstr "Procurar:"
+msgstr "Обзор:"
 
 #: library/ext/breadcrumb-trail.php:245
 msgctxt "breadcrumbs aria label"
 msgid "Breadcrumbs"
-msgstr ""
+msgstr "Хлебные крошки"
 
 #: library/ext/breadcrumb-trail.php:246
 msgid "Home"
-msgstr "Início"
+msgstr "Домой"
 
 #: library/ext/breadcrumb-trail.php:247 library/inc/template-general.php:422
 msgid "404 Not Found"
-msgstr "404 Não encontrado"
+msgstr "404 Не найдено"
 
 #: library/ext/breadcrumb-trail.php:248 library/inc/template-general.php:218
 msgid "Archives"
-msgstr "Arquivo"
+msgstr "Архивы"
 
 #. Translators: %s is the search query. The HTML entities are opening and
 #. closing curly quotes.
 #: library/ext/breadcrumb-trail.php:250 library/inc/template-general.php:400
 msgid "Search results for &#8220;%s&#8221;"
-msgstr "Resultado da pesquisa por &#8220;%s&#8221;"
+msgstr "Результаты поиска для &#8220;%s&#8221;"
 
 #. Translators: %s is the page number.
 #: library/ext/breadcrumb-trail.php:252
 msgid "Page %s"
-msgstr "Página %s"
+msgstr "Страница %s"
 
 #. Translators: Minute archive title. %s is the minute time format.
 #: library/ext/breadcrumb-trail.php:254 library/inc/template-general.php:354
 msgid "Minute %s"
-msgstr "Minuto %s"
+msgstr "Минута %s"
 
 #. Translators: Weekly archive title. %s is the week date format.
 #: library/ext/breadcrumb-trail.php:256
 msgid "Week %s"
-msgstr "Semana %s"
+msgstr "Неделя %s"
 
 #: library/ext/breadcrumb-trail.php:708 library/inc/template-general.php:376
 msgctxt "minute and hour archives time format"
 msgid "g:i a"
-msgstr "g:i a"
+msgstr ""
 
 #: library/ext/breadcrumb-trail.php:725 library/inc/template-general.php:354
 msgctxt "minute archives time format"
 msgid "i"
-msgstr "i"
+msgstr ""
 
 #: library/ext/breadcrumb-trail.php:742 library/inc/template-general.php:330
 msgctxt "hour archives time format"
 msgid "g a"
-msgstr "g a"
+msgstr ""
 
 #: library/ext/breadcrumb-trail.php:758 library/ext/breadcrumb-trail.php:787
 #: library/ext/breadcrumb-trail.php:814 library/ext/breadcrumb-trail.php:841
@@ -341,74 +339,74 @@ msgstr "g a"
 #: library/inc/template-general.php:286
 msgctxt "yearly archives date format"
 msgid "Y"
-msgstr "Y"
+msgstr ""
 
 #: library/ext/breadcrumb-trail.php:759 library/ext/breadcrumb-trail.php:815
 #: library/ext/breadcrumb-trail.php:1180
 msgctxt "monthly archives date format"
 msgid "F"
-msgstr "F"
+msgstr ""
 
 #: library/ext/breadcrumb-trail.php:760 library/ext/breadcrumb-trail.php:1184
 msgctxt "daily archives date format"
 msgid "j"
-msgstr "j"
+msgstr ""
 
 #: library/ext/breadcrumb-trail.php:788 library/inc/template-general.php:286
 msgctxt "weekly archives date format"
 msgid "W"
-msgstr "W"
+msgstr ""
 
 #. Translators: Media dimensions - 1 is width and 2 is height.
 #: library/inc/class-media-meta.php:245 library/inc/template-media.php:172
 msgid "%1$s &#215; %2$s"
-msgstr "%1$s &#215; %2$s"
+msgstr ""
 
 #. Translators: The %s is the sidebar name. This is used for the 'aria-label'
 #. attribute.
 #: library/inc/functions-attr.php:202
 msgctxt "sidebar aria label"
 msgid "%s Sidebar"
-msgstr "%s Barra lateral"
+msgstr "%s Сайдбар"
 
 #. Translators: The %s is the menu name. This is used for the 'aria-label'
 #. attribute.
 #: library/inc/functions-attr.php:235
 msgctxt "nav menu aria label"
 msgid "%s Menu"
-msgstr "%s Menu"
+msgstr "%s Меню"
 
 #. Translators: Post date/time "title" attribute.
 #: library/inc/functions-attr.php:476
 msgctxt "post time format"
 msgid "l, F j, Y, g:i a"
-msgstr "l, F j, Y, g:i a"
+msgstr ""
 
 #. Translators: Comment date/time "title" attribute.
 #: library/inc/functions-attr.php:601
 msgctxt "comment time format"
 msgid "l, F j, Y, g:i a"
-msgstr "l, F j, Y, g:i a"
+msgstr ""
 
 #: library/inc/functions-customize.php:95
 msgid "Global Layout"
-msgstr "Layout global"
+msgstr "Глобальный макет"
 
 #. Translators: 1 is the page title. 2 is the page number.
 #: library/inc/functions-head.php:140
 msgid "%1$s Page %2$s"
-msgstr "%1$s Página %2$s"
+msgstr "%1$s Страница %2$s"
 
 #. Translators: Default theme layout option.
 #: library/inc/functions-layouts.php:51
 msgctxt "theme layout"
 msgid "Default"
-msgstr "Padrão"
+msgstr "По-умолчанию"
 
 #. Translators: Used as a placeholder for untitled posts on non-singular views.
 #: library/inc/functions-utility.php:94
 msgid "(Untitled)"
-msgstr "(Sem título)"
+msgstr "(Безымянный)"
 
 #: library/inc/template-general.php:55
 msgid "http://wordpress.org"
@@ -416,82 +414,81 @@ msgstr ""
 
 #: library/inc/template-general.php:55
 msgid "WordPress"
-msgstr "WordPress"
+msgstr ""
 
 #. Translators: 1 is the week number and 2 is the year.
 #: library/inc/template-general.php:286
 msgid "Week %1$s of %2$s"
-msgstr "Semana %1$s de %2$s"
+msgstr "Неделя %1$s из %2$s"
 
 #: library/inc/template-general.php:308
 msgctxt "daily archives date format"
 msgid "F j, Y"
-msgstr "F j, Y"
+msgstr ""
 
 #. Translators: Separates tags, categories, etc. when displaying a post.
 #: library/inc/template-post.php:219
 msgctxt "taxonomy terms separator"
 msgid ", "
-msgstr ", "
+msgstr ""
 
 #. Translators: The two %s are placeholders for HTML. The order can't be
 #. changed.
 #: misc/comments-error.php:6
 msgid "Comments are closed, but %strackbacks%s and pingbacks are open."
-msgstr ""
-"Os comentários estão fechado mas %strackbacks%s e pingbacks estão abertos."
+msgstr "Комментарии закрыты, но %sтрекбеки%s и пингбеки открыты."
 
 #: misc/comments-error.php:13
 msgid "Comments are closed."
-msgstr "Os comentários estão fechados."
+msgstr "Комментарии закрыты."
 
 #: misc/comments-nav.php:5
 msgid "Comments Navigation"
-msgstr "Navegação pelos comentários"
+msgstr "Навигация по комментариям"
 
 #: misc/comments-nav.php:7
 msgctxt "comments navigation"
 msgid "&larr; Previous"
-msgstr "&larr; Anterior"
+msgstr "&larr; Предыдущие"
 
 #. Translators: Comments page numbers. 1 is current page and 2 is total pages.
 #: misc/comments-nav.php:11
 msgid "Page %1$s of %2$s"
-msgstr "Página %1$s de %2$s"
+msgstr "Страница %1$s из %2$s"
 
 #: misc/comments-nav.php:14
 msgctxt "comments navigation"
 msgid "Next &rarr;"
-msgstr "Próximo &rarr;"
+msgstr "Следующие &rarr;"
 
 #: misc/loop-nav.php:4
 msgid "Previous Post: %link"
-msgstr "Publicação anterior: %link"
+msgstr "Предыдущая запись: %link"
 
 #: misc/loop-nav.php:5
 msgid "Next Post: %link"
-msgstr "Próxima publicação: %link"
+msgstr "Следующая запись: %link"
 
 #: misc/loop-nav.php:12
 msgctxt "posts navigation"
 msgid "&larr; Previous"
-msgstr "&larr; Anterior"
+msgstr "&larr; Предыдущие"
 
 #: misc/loop-nav.php:13
 msgctxt "posts navigation"
 msgid "Next &rarr;"
-msgstr "Próximo &rarr;"
+msgstr "Следующие &rarr;"
 
 #. Translators: %s is the sidebar name. This is the sidebar title shown to
 #. screen readers.
 #: sidebar/primary.php:7
 msgctxt "sidebar title"
 msgid "%s Sidebar"
-msgstr "%s Barra lateral"
+msgstr "%s Сайдбар"
 
 #: sidebar/primary.php:19
 msgid "Example Widget"
-msgstr "Widget de exemplo"
+msgstr "Пример виджета"
 
 #. Translators: The %s are placeholders for HTML, so the order can't be
 #. changed.
@@ -500,17 +497,17 @@ msgid ""
 "This is an example widget to show how the Primary sidebar looks by default. "
 "You can add custom widgets from the %swidgets screen%s in the admin."
 msgstr ""
-"Este é um widget de exemplo para mostrar como a barra lateral primária se "
-"parece por padrão. Você pode adicionar widgets personalizados a partir da "
-"%swidgets screen%s no admin."
+"Это пример виджета для демонстрации как выглядит главный сайдбар по-"
+"умолчанию. Вы можете добавить любые виджеты из раздела %sВиджеты%s в "
+"административном интерфейсе."
 
 #. Theme Name of the plugin/theme
 msgid "Stargazer"
-msgstr "Stargazer"
+msgstr ""
 
 #. Theme URI of the plugin/theme
 msgid "http://themehybrid.com/themes/stargazer"
-msgstr "http://themehybrid.com/themes/stargazer"
+msgstr ""
 
 #. Description of the plugin/theme
 msgid ""
@@ -526,83 +523,11 @@ msgid ""
 "header-extended\">Custom Header Extended</a>, <a href=\"http://wordpress.org/"
 "plugins/whistles\">Whistles</a>, and more."
 msgstr ""
-"Bem-vindo ao Stargazer, o tema mais avançado já criado para o WordPress sem "
-"comprometer os padrões. Este é o único tema no mundo que você vai encontrar "
-"que estende os recursos embutidos no WordPress de modo robusto mas natural. "
-"O tema é construído sobre a sólida estrutura do framework Hybrid Core. Ele é "
-"construído com Otimização para Ferramentas de Busca (SEO) em mente, "
-"utilizando as convenções HTML5 mais atuais e <a href=\"http://schema.org"
-"\">Schema.org</a> microdados. Ele também se integra com plugins como <a href="
-"\"http://wordpress.org/plugins/custom-background-extended\">Custom "
-"Background Extended</a>, <a href=\"http://wordpress.org/plugins/custom-"
-"header-extended\">Custom Header Extended</a>, <a href=\"http://wordpress.org/"
-"plugins/whistles\">Whistles</a>, além de outros."
 
 #. Author of the plugin/theme
 msgid "Justin Tadlock"
-msgstr "Justin Tadlock"
+msgstr ""
 
 #. Author URI of the plugin/theme
-#, fuzzy
 msgid "http://themehybrid.com"
-msgstr "http://themehybrid.com/themes/stargazer"
-
-#~ msgid "%s Theme Settings"
-#~ msgstr "%s Definições do tema"
-
-#~ msgid "Theme Settings"
-#~ msgstr "Definições do tema"
-
-#~ msgctxt "theme customizer tab"
-#~ msgid "Default"
-#~ msgstr "Padrão"
-
-#~ msgid "International Organization for Standardization"
-#~ msgstr "International Organization for Standardization"
-
-#~ msgid "Edit"
-#~ msgstr "Editar"
-
-#~ msgid "Split"
-#~ msgstr "Dividir"
-
-#~ msgid "Merge"
-#~ msgstr "Misturar"
-
-#~ msgid "Post Thumbnail"
-#~ msgstr "Thumbnail do post"
-
-#~ msgid "File Size"
-#~ msgstr "Tamanho do arquivo"
-
-#~ msgid "Composer"
-#~ msgstr "Compositor"
-
-#~ msgid "Lyrics"
-#~ msgstr "Letra"
-
-#~ msgid "State-of-the-art semantic personal publishing platform"
-#~ msgstr "A melhor plataforma de publicação pessoal semântica"
-
-#~ msgid "%s WordPress Theme"
-#~ msgstr "%s Tema WordPress"
-
-#~ msgid "You are browsing the search results for &#8220;%s&#8221;"
-#~ msgstr ""
-#~ "Você está navegando pelos resultado da pesquisa por &#8220;%s&#8221;"
-
-#~ msgid "You are browsing the site archives by time."
-#~ msgstr "Você está navegando pelo arquivo do site por tempo. "
-
-#~ msgid "You are browsing the site archives for %s."
-#~ msgstr "Você está navegando pelo arquivo do site por %s."
-
-#~ msgid "You are browsing the site archives."
-#~ msgstr "Você está navegando pelo arquivo do site."
-
-#~ msgctxt "nav menu title"
-#~ msgid "%s Menu"
-#~ msgstr "%s Menu"
-
-#~ msgid "http://justintadlock.com"
-#~ msgstr "http://justintadlock.com"
+msgstr ""
